parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> top_level_list
Rule 2     top_level_list -> top_level_list top_level
Rule 3     top_level_list -> top_level
Rule 4     top_level -> statement
Rule 5     top_level -> func_def
Rule 6     lambda_expr -> FN IDENTIFIER FAT_ARROW expr  [precedence=right, level=2]
Rule 7     func_def -> FN IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 8     func_def -> FN IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
Rule 9     param_list -> param_list COMMA IDENTIFIER
Rule 10    param_list -> IDENTIFIER
Rule 11    statements -> statements statement
Rule 12    statements -> statement
Rule 13    statement -> WHILE expr LBRACE statements RBRACE
Rule 14    statement -> FOR IDENTIFIER IN expr LBRACE statements RBRACE
Rule 15    statement -> IF expr LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 16    statement -> IF expr LBRACE statements RBRACE
Rule 17    statement -> expr SEMI
Rule 18    statement -> RETURN expr SEMI
Rule 19    statement -> LET IDENTIFIER EQ expr SEMI
Rule 20    expr -> expr IS_NONE
Rule 21    expr -> expr IS_SOME
Rule 22    expr -> expr LTE term  [precedence=left, level=4]
Rule 23    expr -> expr GTE term  [precedence=left, level=4]
Rule 24    expr -> expr LT term  [precedence=left, level=4]
Rule 25    expr -> expr GT term  [precedence=left, level=4]
Rule 26    expr -> expr NEQ term  [precedence=left, level=3]
Rule 27    expr -> expr EQEQ term  [precedence=left, level=3]
Rule 28    expr -> expr MINUS term  [precedence=left, level=5]
Rule 29    expr -> expr PLUS term  [precedence=left, level=5]
Rule 30    expr -> term
Rule 31    expr -> match_expr
Rule 32    expr -> primary EQ expr  [precedence=right, level=1]
Rule 33    term -> factor
Rule 34    term -> term DIVIDE factor  [precedence=left, level=6]
Rule 35    term -> term TIMES factor  [precedence=left, level=6]
Rule 36    factor -> primary
Rule 37    primary -> FN LPAREN RPAREN LBRACE statements RBRACE
Rule 38    primary -> FN LPAREN param_list RPAREN LBRACE statements RBRACE
Rule 39    primary -> lambda_expr
Rule 40    primary -> LPAREN expr RPAREN
Rule 41    primary -> NONE
Rule 42    primary -> SOME LPAREN expr RPAREN
Rule 43    primary -> NUMBER
Rule 44    primary -> IDENTIFIER
Rule 45    primary -> primary LPAREN RPAREN
Rule 46    primary -> primary LPAREN arg_list RPAREN
Rule 47    primary -> primary DOT IDENTIFIER LPAREN RPAREN
Rule 48    primary -> primary DOT IDENTIFIER LPAREN arg_list RPAREN
Rule 49    primary -> primary LBRACKET expr RBRACKET
Rule 50    primary -> LBRACKET RBRACKET
Rule 51    primary -> LBRACKET expr_list RBRACKET
Rule 52    primary -> primary DOT IS_NONE
Rule 53    primary -> primary DOT IS_SOME
Rule 54    primary -> IS_NONE LPAREN expr RPAREN
Rule 55    primary -> IS_SOME LPAREN expr RPAREN
Rule 56    expr_list -> expr_list COMMA expr
Rule 57    expr_list -> expr
Rule 58    arg_list -> arg_list COMMA expr
Rule 59    arg_list -> expr
Rule 60    match_expr -> MATCH IDENTIFIER LBRACE match_cases RBRACE
Rule 61    match_cases -> match_cases COMMA match_case
Rule 62    match_cases -> match_case
Rule 63    match_case -> NONE FAT_ARROW expr  [precedence=right, level=2]
Rule 64    match_case -> SOME LPAREN IDENTIFIER RPAREN FAT_ARROW expr  [precedence=right, level=2]

Terminals, with rules where they appear:

COMMA                : 9 56 58 61
DIVIDE               : 34
DOT                  : 47 48 52 53
ELSE                 : 15
EQ                   : 19 32
EQEQ                 : 27
FAT_ARROW            : 6 63 64
FN                   : 6 7 8 37 38
FOR                  : 14
GT                   : 25
GTE                  : 23
IDENTIFIER           : 6 7 8 9 10 14 19 44 47 48 60 64
IF                   : 15 16
IN                   : 14
IS_NONE              : 20 52 54
IS_SOME              : 21 53 55
LBRACE               : 7 8 13 14 15 15 16 37 38 60
LBRACKET             : 49 50 51
LET                  : 19
LPAREN               : 7 8 37 38 40 42 45 46 47 48 54 55 64
LT                   : 24
LTE                  : 22
MATCH                : 60
MINUS                : 28
NEQ                  : 26
NONE                 : 41 63
NUMBER               : 43
PLUS                 : 29
RBRACE               : 7 8 13 14 15 15 16 37 38 60
RBRACKET             : 49 50 51
RETURN               : 18
RPAREN               : 7 8 37 38 40 42 45 46 47 48 54 55 64
SEMI                 : 17 18 19
SOME                 : 42 64
TIMES                : 35
WHILE                : 13
error                : 

Nonterminals, with rules where they appear:

arg_list             : 46 48 58
expr                 : 6 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 32 40 42 49 54 55 56 57 58 59 63 64
expr_list            : 51 56
factor               : 33 34 35
func_def             : 5
lambda_expr          : 39
match_case           : 61 62
match_cases          : 60 61
match_expr           : 31
param_list           : 8 9 38
primary              : 32 36 45 46 47 48 49 52 53
program              : 0
statement            : 4 11 12
statements           : 7 8 11 13 14 15 15 16 37 38
term                 : 22 23 24 25 26 27 28 29 30 34 35
top_level            : 2 3
top_level_list       : 1 2


state 0

    (0) S' -> . program
    (1) program -> . top_level_list
    (2) top_level_list -> . top_level_list top_level
    (3) top_level_list -> . top_level
    (4) top_level -> . statement
    (5) top_level -> . func_def
    (13) statement -> . WHILE expr LBRACE statements RBRACE
    (14) statement -> . FOR IDENTIFIER IN expr LBRACE statements RBRACE
    (15) statement -> . IF expr LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (16) statement -> . IF expr LBRACE statements RBRACE
    (17) statement -> . expr SEMI
    (18) statement -> . RETURN expr SEMI
    (19) statement -> . LET IDENTIFIER EQ expr SEMI
    (7) func_def -> . FN IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (8) func_def -> . FN IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
    (20) expr -> . expr IS_NONE
    (21) expr -> . expr IS_SOME
    (22) expr -> . expr LTE term
    (23) expr -> . expr GTE term
    (24) expr -> . expr LT term
    (25) expr -> . expr GT term
    (26) expr -> . expr NEQ term
    (27) expr -> . expr EQEQ term
    (28) expr -> . expr MINUS term
    (29) expr -> . expr PLUS term
    (30) expr -> . term
    (31) expr -> . match_expr
    (32) expr -> . primary EQ expr
    (33) term -> . factor
    (34) term -> . term DIVIDE factor
    (35) term -> . term TIMES factor
    (60) match_expr -> . MATCH IDENTIFIER LBRACE match_cases RBRACE
    (37) primary -> . FN LPAREN RPAREN LBRACE statements RBRACE
    (38) primary -> . FN LPAREN param_list RPAREN LBRACE statements RBRACE
    (39) primary -> . lambda_expr
    (40) primary -> . LPAREN expr RPAREN
    (41) primary -> . NONE
    (42) primary -> . SOME LPAREN expr RPAREN
    (43) primary -> . NUMBER
    (44) primary -> . IDENTIFIER
    (45) primary -> . primary LPAREN RPAREN
    (46) primary -> . primary LPAREN arg_list RPAREN
    (47) primary -> . primary DOT IDENTIFIER LPAREN RPAREN
    (48) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (49) primary -> . primary LBRACKET expr RBRACKET
    (50) primary -> . LBRACKET RBRACKET
    (51) primary -> . LBRACKET expr_list RBRACKET
    (52) primary -> . primary DOT IS_NONE
    (53) primary -> . primary DOT IS_SOME
    (54) primary -> . IS_NONE LPAREN expr RPAREN
    (55) primary -> . IS_SOME LPAREN expr RPAREN
    (36) factor -> . primary
    (6) lambda_expr -> . FN IDENTIFIER FAT_ARROW expr
    WHILE           shift and go to state 6
    FOR             shift and go to state 8
    IF              shift and go to state 10
    RETURN          shift and go to state 11
    LET             shift and go to state 12
    FN              shift and go to state 13
    MATCH           shift and go to state 21
    LPAREN          shift and go to state 14
    NONE            shift and go to state 23
    SOME            shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 9
    LBRACKET        shift and go to state 26
    IS_NONE         shift and go to state 15
    IS_SOME         shift and go to state 16

    program                        shift and go to state 1
    top_level_list                 shift and go to state 2
    top_level                      shift and go to state 3
    statement                      shift and go to state 4
    func_def                       shift and go to state 5
    expr                           shift and go to state 7
    term                           shift and go to state 17
    match_expr                     shift and go to state 18
    primary                        shift and go to state 19
    factor                         shift and go to state 20
    lambda_expr                    shift and go to state 22

state 1

    (0) S' -> program .


state 2

    (1) program -> top_level_list .
    (2) top_level_list -> top_level_list . top_level
    (4) top_level -> . statement
    (5) top_level -> . func_def
    (13) statement -> . WHILE expr LBRACE statements RBRACE
    (14) statement -> . FOR IDENTIFIER IN expr LBRACE statements RBRACE
    (15) statement -> . IF expr LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (16) statement -> . IF expr LBRACE statements RBRACE
    (17) statement -> . expr SEMI
    (18) statement -> . RETURN expr SEMI
    (19) statement -> . LET IDENTIFIER EQ expr SEMI
    (7) func_def -> . FN IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (8) func_def -> . FN IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
    (20) expr -> . expr IS_NONE
    (21) expr -> . expr IS_SOME
    (22) expr -> . expr LTE term
    (23) expr -> . expr GTE term
    (24) expr -> . expr LT term
    (25) expr -> . expr GT term
    (26) expr -> . expr NEQ term
    (27) expr -> . expr EQEQ term
    (28) expr -> . expr MINUS term
    (29) expr -> . expr PLUS term
    (30) expr -> . term
    (31) expr -> . match_expr
    (32) expr -> . primary EQ expr
    (33) term -> . factor
    (34) term -> . term DIVIDE factor
    (35) term -> . term TIMES factor
    (60) match_expr -> . MATCH IDENTIFIER LBRACE match_cases RBRACE
    (37) primary -> . FN LPAREN RPAREN LBRACE statements RBRACE
    (38) primary -> . FN LPAREN param_list RPAREN LBRACE statements RBRACE
    (39) primary -> . lambda_expr
    (40) primary -> . LPAREN expr RPAREN
    (41) primary -> . NONE
    (42) primary -> . SOME LPAREN expr RPAREN
    (43) primary -> . NUMBER
    (44) primary -> . IDENTIFIER
    (45) primary -> . primary LPAREN RPAREN
    (46) primary -> . primary LPAREN arg_list RPAREN
    (47) primary -> . primary DOT IDENTIFIER LPAREN RPAREN
    (48) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (49) primary -> . primary LBRACKET expr RBRACKET
    (50) primary -> . LBRACKET RBRACKET
    (51) primary -> . LBRACKET expr_list RBRACKET
    (52) primary -> . primary DOT IS_NONE
    (53) primary -> . primary DOT IS_SOME
    (54) primary -> . IS_NONE LPAREN expr RPAREN
    (55) primary -> . IS_SOME LPAREN expr RPAREN
    (36) factor -> . primary
    (6) lambda_expr -> . FN IDENTIFIER FAT_ARROW expr
    $end            reduce using rule 1 (program -> top_level_list .)
    WHILE           shift and go to state 6
    FOR             shift and go to state 8
    IF              shift and go to state 10
    RETURN          shift and go to state 11
    LET             shift and go to state 12
    FN              shift and go to state 13
    MATCH           shift and go to state 21
    LPAREN          shift and go to state 14
    NONE            shift and go to state 23
    SOME            shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 9
    LBRACKET        shift and go to state 26
    IS_NONE         shift and go to state 15
    IS_SOME         shift and go to state 16

    top_level                      shift and go to state 27
    statement                      shift and go to state 4
    func_def                       shift and go to state 5
    expr                           shift and go to state 7
    term                           shift and go to state 17
    match_expr                     shift and go to state 18
    primary                        shift and go to state 19
    factor                         shift and go to state 20
    lambda_expr                    shift and go to state 22

state 3

    (3) top_level_list -> top_level .
    WHILE           reduce using rule 3 (top_level_list -> top_level .)
    FOR             reduce using rule 3 (top_level_list -> top_level .)
    IF              reduce using rule 3 (top_level_list -> top_level .)
    RETURN          reduce using rule 3 (top_level_list -> top_level .)
    LET             reduce using rule 3 (top_level_list -> top_level .)
    FN              reduce using rule 3 (top_level_list -> top_level .)
    MATCH           reduce using rule 3 (top_level_list -> top_level .)
    LPAREN          reduce using rule 3 (top_level_list -> top_level .)
    NONE            reduce using rule 3 (top_level_list -> top_level .)
    SOME            reduce using rule 3 (top_level_list -> top_level .)
    NUMBER          reduce using rule 3 (top_level_list -> top_level .)
    IDENTIFIER      reduce using rule 3 (top_level_list -> top_level .)
    LBRACKET        reduce using rule 3 (top_level_list -> top_level .)
    IS_NONE         reduce using rule 3 (top_level_list -> top_level .)
    IS_SOME         reduce using rule 3 (top_level_list -> top_level .)
    $end            reduce using rule 3 (top_level_list -> top_level .)


state 4

    (4) top_level -> statement .
    WHILE           reduce using rule 4 (top_level -> statement .)
    FOR             reduce using rule 4 (top_level -> statement .)
    IF              reduce using rule 4 (top_level -> statement .)
    RETURN          reduce using rule 4 (top_level -> statement .)
    LET             reduce using rule 4 (top_level -> statement .)
    FN              reduce using rule 4 (top_level -> statement .)
    MATCH           reduce using rule 4 (top_level -> statement .)
    LPAREN          reduce using rule 4 (top_level -> statement .)
    NONE            reduce using rule 4 (top_level -> statement .)
    SOME            reduce using rule 4 (top_level -> statement .)
    NUMBER          reduce using rule 4 (top_level -> statement .)
    IDENTIFIER      reduce using rule 4 (top_level -> statement .)
    LBRACKET        reduce using rule 4 (top_level -> statement .)
    IS_NONE         reduce using rule 4 (top_level -> statement .)
    IS_SOME         reduce using rule 4 (top_level -> statement .)
    $end            reduce using rule 4 (top_level -> statement .)


state 5

    (5) top_level -> func_def .
    WHILE           reduce using rule 5 (top_level -> func_def .)
    FOR             reduce using rule 5 (top_level -> func_def .)
    IF              reduce using rule 5 (top_level -> func_def .)
    RETURN          reduce using rule 5 (top_level -> func_def .)
    LET             reduce using rule 5 (top_level -> func_def .)
    FN              reduce using rule 5 (top_level -> func_def .)
    MATCH           reduce using rule 5 (top_level -> func_def .)
    LPAREN          reduce using rule 5 (top_level -> func_def .)
    NONE            reduce using rule 5 (top_level -> func_def .)
    SOME            reduce using rule 5 (top_level -> func_def .)
    NUMBER          reduce using rule 5 (top_level -> func_def .)
    IDENTIFIER      reduce using rule 5 (top_level -> func_def .)
    LBRACKET        reduce using rule 5 (top_level -> func_def .)
    IS_NONE         reduce using rule 5 (top_level -> func_def .)
    IS_SOME         reduce using rule 5 (top_level -> func_def .)
    $end            reduce using rule 5 (top_level -> func_def .)


state 6

    (13) statement -> WHILE . expr LBRACE statements RBRACE
    (20) expr -> . expr IS_NONE
    (21) expr -> . expr IS_SOME
    (22) expr -> . expr LTE term
    (23) expr -> . expr GTE term
    (24) expr -> . expr LT term
    (25) expr -> . expr GT term
    (26) expr -> . expr NEQ term
    (27) expr -> . expr EQEQ term
    (28) expr -> . expr MINUS term
    (29) expr -> . expr PLUS term
    (30) expr -> . term
    (31) expr -> . match_expr
    (32) expr -> . primary EQ expr
    (33) term -> . factor
    (34) term -> . term DIVIDE factor
    (35) term -> . term TIMES factor
    (60) match_expr -> . MATCH IDENTIFIER LBRACE match_cases RBRACE
    (37) primary -> . FN LPAREN RPAREN LBRACE statements RBRACE
    (38) primary -> . FN LPAREN param_list RPAREN LBRACE statements RBRACE
    (39) primary -> . lambda_expr
    (40) primary -> . LPAREN expr RPAREN
    (41) primary -> . NONE
    (42) primary -> . SOME LPAREN expr RPAREN
    (43) primary -> . NUMBER
    (44) primary -> . IDENTIFIER
    (45) primary -> . primary LPAREN RPAREN
    (46) primary -> . primary LPAREN arg_list RPAREN
    (47) primary -> . primary DOT IDENTIFIER LPAREN RPAREN
    (48) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (49) primary -> . primary LBRACKET expr RBRACKET
    (50) primary -> . LBRACKET RBRACKET
    (51) primary -> . LBRACKET expr_list RBRACKET
    (52) primary -> . primary DOT IS_NONE
    (53) primary -> . primary DOT IS_SOME
    (54) primary -> . IS_NONE LPAREN expr RPAREN
    (55) primary -> . IS_SOME LPAREN expr RPAREN
    (36) factor -> . primary
    (6) lambda_expr -> . FN IDENTIFIER FAT_ARROW expr
    MATCH           shift and go to state 21
    FN              shift and go to state 29
    LPAREN          shift and go to state 14
    NONE            shift and go to state 23
    SOME            shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 9
    LBRACKET        shift and go to state 26
    IS_NONE         shift and go to state 15
    IS_SOME         shift and go to state 16

    expr                           shift and go to state 28
    term                           shift and go to state 17
    match_expr                     shift and go to state 18
    primary                        shift and go to state 19
    factor                         shift and go to state 20
    lambda_expr                    shift and go to state 22

state 7

    (17) statement -> expr . SEMI
    (20) expr -> expr . IS_NONE
    (21) expr -> expr . IS_SOME
    (22) expr -> expr . LTE term
    (23) expr -> expr . GTE term
    (24) expr -> expr . LT term
    (25) expr -> expr . GT term
    (26) expr -> expr . NEQ term
    (27) expr -> expr . EQEQ term
    (28) expr -> expr . MINUS term
    (29) expr -> expr . PLUS term
    SEMI            shift and go to state 30
    IS_NONE         shift and go to state 31
    IS_SOME         shift and go to state 32
    LTE             shift and go to state 33
    GTE             shift and go to state 34
    LT              shift and go to state 35
    GT              shift and go to state 36
    NEQ             shift and go to state 37
    EQEQ            shift and go to state 38
    MINUS           shift and go to state 39
    PLUS            shift and go to state 40


state 8

    (14) statement -> FOR . IDENTIFIER IN expr LBRACE statements RBRACE
    IDENTIFIER      shift and go to state 41


state 9

    (44) primary -> IDENTIFIER .
    EQ              reduce using rule 44 (primary -> IDENTIFIER .)
    LPAREN          reduce using rule 44 (primary -> IDENTIFIER .)
    DOT             reduce using rule 44 (primary -> IDENTIFIER .)
    LBRACKET        reduce using rule 44 (primary -> IDENTIFIER .)
    DIVIDE          reduce using rule 44 (primary -> IDENTIFIER .)
    TIMES           reduce using rule 44 (primary -> IDENTIFIER .)
    SEMI            reduce using rule 44 (primary -> IDENTIFIER .)
    IS_NONE         reduce using rule 44 (primary -> IDENTIFIER .)
    IS_SOME         reduce using rule 44 (primary -> IDENTIFIER .)
    LTE             reduce using rule 44 (primary -> IDENTIFIER .)
    GTE             reduce using rule 44 (primary -> IDENTIFIER .)
    LT              reduce using rule 44 (primary -> IDENTIFIER .)
    GT              reduce using rule 44 (primary -> IDENTIFIER .)
    NEQ             reduce using rule 44 (primary -> IDENTIFIER .)
    EQEQ            reduce using rule 44 (primary -> IDENTIFIER .)
    MINUS           reduce using rule 44 (primary -> IDENTIFIER .)
    PLUS            reduce using rule 44 (primary -> IDENTIFIER .)
    LBRACE          reduce using rule 44 (primary -> IDENTIFIER .)
    RPAREN          reduce using rule 44 (primary -> IDENTIFIER .)
    RBRACKET        reduce using rule 44 (primary -> IDENTIFIER .)
    COMMA           reduce using rule 44 (primary -> IDENTIFIER .)
    RBRACE          reduce using rule 44 (primary -> IDENTIFIER .)


state 10

    (15) statement -> IF . expr LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (16) statement -> IF . expr LBRACE statements RBRACE
    (20) expr -> . expr IS_NONE
    (21) expr -> . expr IS_SOME
    (22) expr -> . expr LTE term
    (23) expr -> . expr GTE term
    (24) expr -> . expr LT term
    (25) expr -> . expr GT term
    (26) expr -> . expr NEQ term
    (27) expr -> . expr EQEQ term
    (28) expr -> . expr MINUS term
    (29) expr -> . expr PLUS term
    (30) expr -> . term
    (31) expr -> . match_expr
    (32) expr -> . primary EQ expr
    (33) term -> . factor
    (34) term -> . term DIVIDE factor
    (35) term -> . term TIMES factor
    (60) match_expr -> . MATCH IDENTIFIER LBRACE match_cases RBRACE
    (37) primary -> . FN LPAREN RPAREN LBRACE statements RBRACE
    (38) primary -> . FN LPAREN param_list RPAREN LBRACE statements RBRACE
    (39) primary -> . lambda_expr
    (40) primary -> . LPAREN expr RPAREN
    (41) primary -> . NONE
    (42) primary -> . SOME LPAREN expr RPAREN
    (43) primary -> . NUMBER
    (44) primary -> . IDENTIFIER
    (45) primary -> . primary LPAREN RPAREN
    (46) primary -> . primary LPAREN arg_list RPAREN
    (47) primary -> . primary DOT IDENTIFIER LPAREN RPAREN
    (48) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (49) primary -> . primary LBRACKET expr RBRACKET
    (50) primary -> . LBRACKET RBRACKET
    (51) primary -> . LBRACKET expr_list RBRACKET
    (52) primary -> . primary DOT IS_NONE
    (53) primary -> . primary DOT IS_SOME
    (54) primary -> . IS_NONE LPAREN expr RPAREN
    (55) primary -> . IS_SOME LPAREN expr RPAREN
    (36) factor -> . primary
    (6) lambda_expr -> . FN IDENTIFIER FAT_ARROW expr
    MATCH           shift and go to state 21
    FN              shift and go to state 29
    LPAREN          shift and go to state 14
    NONE            shift and go to state 23
    SOME            shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 9
    LBRACKET        shift and go to state 26
    IS_NONE         shift and go to state 15
    IS_SOME         shift and go to state 16

    expr                           shift and go to state 42
    term                           shift and go to state 17
    match_expr                     shift and go to state 18
    primary                        shift and go to state 19
    factor                         shift and go to state 20
    lambda_expr                    shift and go to state 22

state 11

    (18) statement -> RETURN . expr SEMI
    (20) expr -> . expr IS_NONE
    (21) expr -> . expr IS_SOME
    (22) expr -> . expr LTE term
    (23) expr -> . expr GTE term
    (24) expr -> . expr LT term
    (25) expr -> . expr GT term
    (26) expr -> . expr NEQ term
    (27) expr -> . expr EQEQ term
    (28) expr -> . expr MINUS term
    (29) expr -> . expr PLUS term
    (30) expr -> . term
    (31) expr -> . match_expr
    (32) expr -> . primary EQ expr
    (33) term -> . factor
    (34) term -> . term DIVIDE factor
    (35) term -> . term TIMES factor
    (60) match_expr -> . MATCH IDENTIFIER LBRACE match_cases RBRACE
    (37) primary -> . FN LPAREN RPAREN LBRACE statements RBRACE
    (38) primary -> . FN LPAREN param_list RPAREN LBRACE statements RBRACE
    (39) primary -> . lambda_expr
    (40) primary -> . LPAREN expr RPAREN
    (41) primary -> . NONE
    (42) primary -> . SOME LPAREN expr RPAREN
    (43) primary -> . NUMBER
    (44) primary -> . IDENTIFIER
    (45) primary -> . primary LPAREN RPAREN
    (46) primary -> . primary LPAREN arg_list RPAREN
    (47) primary -> . primary DOT IDENTIFIER LPAREN RPAREN
    (48) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (49) primary -> . primary LBRACKET expr RBRACKET
    (50) primary -> . LBRACKET RBRACKET
    (51) primary -> . LBRACKET expr_list RBRACKET
    (52) primary -> . primary DOT IS_NONE
    (53) primary -> . primary DOT IS_SOME
    (54) primary -> . IS_NONE LPAREN expr RPAREN
    (55) primary -> . IS_SOME LPAREN expr RPAREN
    (36) factor -> . primary
    (6) lambda_expr -> . FN IDENTIFIER FAT_ARROW expr
    MATCH           shift and go to state 21
    FN              shift and go to state 29
    LPAREN          shift and go to state 14
    NONE            shift and go to state 23
    SOME            shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 9
    LBRACKET        shift and go to state 26
    IS_NONE         shift and go to state 15
    IS_SOME         shift and go to state 16

    expr                           shift and go to state 43
    term                           shift and go to state 17
    match_expr                     shift and go to state 18
    primary                        shift and go to state 19
    factor                         shift and go to state 20
    lambda_expr                    shift and go to state 22

state 12

    (19) statement -> LET . IDENTIFIER EQ expr SEMI
    IDENTIFIER      shift and go to state 44


state 13

    (7) func_def -> FN . IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (8) func_def -> FN . IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
    (37) primary -> FN . LPAREN RPAREN LBRACE statements RBRACE
    (38) primary -> FN . LPAREN param_list RPAREN LBRACE statements RBRACE
    (6) lambda_expr -> FN . IDENTIFIER FAT_ARROW expr
    IDENTIFIER      shift and go to state 45
    LPAREN          shift and go to state 46


state 14

    (40) primary -> LPAREN . expr RPAREN
    (20) expr -> . expr IS_NONE
    (21) expr -> . expr IS_SOME
    (22) expr -> . expr LTE term
    (23) expr -> . expr GTE term
    (24) expr -> . expr LT term
    (25) expr -> . expr GT term
    (26) expr -> . expr NEQ term
    (27) expr -> . expr EQEQ term
    (28) expr -> . expr MINUS term
    (29) expr -> . expr PLUS term
    (30) expr -> . term
    (31) expr -> . match_expr
    (32) expr -> . primary EQ expr
    (33) term -> . factor
    (34) term -> . term DIVIDE factor
    (35) term -> . term TIMES factor
    (60) match_expr -> . MATCH IDENTIFIER LBRACE match_cases RBRACE
    (37) primary -> . FN LPAREN RPAREN LBRACE statements RBRACE
    (38) primary -> . FN LPAREN param_list RPAREN LBRACE statements RBRACE
    (39) primary -> . lambda_expr
    (40) primary -> . LPAREN expr RPAREN
    (41) primary -> . NONE
    (42) primary -> . SOME LPAREN expr RPAREN
    (43) primary -> . NUMBER
    (44) primary -> . IDENTIFIER
    (45) primary -> . primary LPAREN RPAREN
    (46) primary -> . primary LPAREN arg_list RPAREN
    (47) primary -> . primary DOT IDENTIFIER LPAREN RPAREN
    (48) primary -> . primary DOT IDENTIFIER LPAREN arg_list RPAREN
    (49) primary -> . primary LBRACKET expr RBRACKET
    (50) primary -> . LBRACKET RBRACKET
    (51) primary -> . LBRACKET expr_list RBRACKET
    (52) primary -> . primary DOT IS_NONE
    (53) primary -> . primary DOT IS_SOME
    (54) primary -> . IS_NONE LPAREN expr RPAREN
    (55) primary -> . IS_SOME LPAREN expr RPAREN
    (36) factor -> . primary
    (6) lambda_expr -> . FN IDENTIFIER FAT_ARROW expr
    MATCH           shift and go to state 21
    FN              shift and go to state 29
    LPAREN          shift and go to state 14
    NONE            shift and go to state 23
    SOME            shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 9
    LBRACKET        shift and go to state 26
    IS_NONE         shift and go to state 15
    IS_SOME         shift and go to state 16

    expr                           shift and go to state 47
    term                           shift and go to state 17
    match_expr                     shift and go to state 18
    primary                        shift and go to state 19
    factor                         shift and go to state 20
    lambda_expr                    shift and go to state 22

state 15

    (54) primary -> IS_NONE . LPAREN expr RPAREN
    LPAREN          shift and go to state 48


state 16

    (55) primary -> IS_SOME . LPAREN expr RPAREN
    LPAREN          shift and go to state 49


state 17

    (30) expr -> term .
    (34) term -> term . DIVIDE factor
    (35) term -> term . TIMES factor
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
    SEMI            reduce using rule 30 (expr -> term .)
    IS_NONE         reduce using rule 30 (expr -> term .)
    IS_SOME         reduce using rule 30 (expr -> term .)
    LTE             reduce using rule 30 (expr -> term .)
    GTE             reduce using rule 30 (expr -> term .)
    LT              reduce using rule 30 (expr -> term .)
    GT              reduce using rule 30 (expr -> term .)
    NEQ             reduce using rule 30 (expr -> term .)
    EQEQ            reduce using rule 30 (expr -> term .)
    MINUS           reduce using rule 30 (expr -> term .)
    PLUS            reduce using rule 30 (expr -> term .)
    LBRACE          reduce using rule 30 (expr -> term .)
    RPAREN          reduce using rule 30 (expr -> term .)
    RBRACKET        reduce using rule 30 (expr -> term .)
    COMMA           reduce using rule 30 (expr -> term .)
    EQ              reduce using rule 30 (expr -> term .)
    LPAREN          reduce using rule 30 (expr -> term .)
    DOT             reduce using rule 30 (expr -> term .)
    LBRACKET        reduce using rule 30 (expr -> term .)
    RBRACE          reduce using rule 30 (expr -> term .)
    DIVIDE          shift and go to state 50
    TIMES           shift and go to state 51


state 18

    (31) expr -> match_expr .
    SEMI            reduce using rule 31 (expr -> match_expr .)
    IS_NONE         reduce using rule 31 (expr -> match_expr .)
    IS_SOME         reduce using rule 31 (expr -> match_expr .)
    LTE             reduce using rule 31 (expr -> match_expr .)
    GTE             reduce using rule 31 (expr -> match_expr .)
    LT              reduce using rule 31 (expr -> match_expr .)
    GT              reduce using rule 31 (expr -> match_expr .)
    NEQ             reduce using rule 31 (expr -> match_expr .)
    EQEQ            reduce using rule 31 (expr -> match_expr .)
    MINUS           reduce using rule 31 (expr -> match_expr .)
    PLUS            reduce using rule 31 (expr -> match_expr .)
    LBRACE          reduce using rule 31 (expr -> match_expr .)
    RPAREN          reduce using rule 31 (expr -> match_expr .)
    RBRACKET        reduce using rule 31 (expr -> match_expr .)
    COMMA           reduce using rule 31 (expr -> match_expr .)
    DIVIDE          reduce using rule 31 (expr -> match_expr .)
    TIMES           reduce using rule 31 (expr -> match_expr .)
    EQ              reduce using rule 31 (expr -> match_expr .)
    LPAREN          reduce using rule 31 (expr -> match_expr .)
    DOT             reduce using rule 31 (expr -> match_expr .)
    LBRACKET        reduce using rule 31 (expr -> match_expr .)
    RBRACE          reduce using rule 31 (expr -> match_expr .)


state 19
